fixed icon spacing. added links to a tags.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,7 +8,7 @@ body {
     text-align: center;
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 900px) {
     body {
         background-image: url("../images/bg-desktop.svg");
         background-size: 82.4rem;
@@ -24,7 +24,7 @@ header {
     margin: 2rem auto 2rem auto;
 }
 
-header > img {
+header  img {
     width: 8rem;
     float: left;
     padding: 0 0;
@@ -32,7 +32,7 @@ header > img {
 }
 
 @media (min-width: 540px) {
-    header > img {
+    header img {
         padding: 0 25rem 0 0.38rem;
     }
 }
@@ -42,14 +42,14 @@ header > img {
         width: 92%;
     }
 
-    header > img {
+    header img {
         width: 10rem;
         padding: 1.1rem 25rem 1.1rem 0.38rem;
     }
 }
 
 @media (min-width: 1100px) {
-    header > img {
+    header img {
         width: 13rem;
         padding: 1.4rem 0.38rem;
     }
@@ -121,7 +121,7 @@ p {
 
 .button:hover {
     color: white;
-    background-color: hsl(257, 40%, 49%);
+    background-color: hsl(286, 46%, 52%);
 }
 
 .button:active {
@@ -206,7 +206,7 @@ p {
         border-radius: 3.6rem;
         box-shadow: 0 0.3rem 0.5rem 0.2rem rgba(0, 0, 0, 0.3);
         font-size: 1.1rem;
-        padding: 0.8rem 0 0 0;
+        padding: 0.9rem 0 0 0;
     }
 
     .button:active {
@@ -225,13 +225,18 @@ footer {
 
 .icon {
     display: inline-block;
-    width: 1.18rem;
-    height: 1.18rem;
+    width: 1.65rem;
+    height: 1.65rem;
     border: 0.06rem solid whitesmoke;
     color: white;
     border-radius: 50%;
     margin: 0 0.22rem;
 } 
+
+.icon:hover {
+    border-color: hsl(286, 46%, 52%);
+    color: hsl(286, 46%, 52%);
+}
 
 .icon > a {
     color: white;
@@ -239,17 +244,17 @@ footer {
 
 .fb {
     font-size: 0.8rem;
-    padding: 0.22rem 0.17rem 0.18rem 0.23rem;
+    margin: 0.4rem 0 0;
 }
 
 .twitter {
     font-size: 0.8rem;
-    padding: 0.26rem 0.15rem 0.14rem 0.25rem;
+    margin: 0.4rem 0 0;
 }
 
 .insta {
     font-size: 0.9rem;
-    padding: 0.17rem 0.22rem 0.23rem 0.18rem;
+    margin: 0.35rem 0 0;
 }
 
 .attribution { 
@@ -269,19 +274,26 @@ footer {
         margin-top: 3rem;
     }
 
+    .icon {
+        width: 2rem;
+        height: 2rem;
+    }
+
     .fb {
         font-size: 1rem;
-        padding: 0.35rem 0.7rem 0.55rem 0.2rem;
+        margin-right: 0.55rem;
+        margin-top: 0.5rem;
     }
 
     .twitter {
         font-size: 1rem;
-        padding: 0.4rem 0.5rem 0.5rem 0.4rem; 
+        margin-right: 0.45rem;
+        margin-top: 0.5rem;
     }
     
     .insta {
-        font-size: 1rem;
-        padding: 0.3rem 0.6rem 0.6rem 0.3rem;
+        font-size: 1.2rem;
+        margin-right: 0.45rem;
     }
 
     .attribution { 
@@ -309,27 +321,30 @@ footer {
 
     .icon {
         display: inline-block;
-        width: 1.4rem;
-        height: 1.4rem;
+        width: 2.3rem;
+        height: 2.3rem;
         border: 0.095rem solid whitesmoke;
         box-shadow: 0 0.1rem rgba(0, 0, 0, 0.1), inset 0 0.1rem rgba(0, 0, 0, 0.1);
         color: white;
         border-radius: 50%;
         margin-left: 0.6rem;
-    } 
-    
+    }
+
     .fb {
         font-size: 1.2rem;
-        padding: 0.35rem 0.8rem 0.55rem 0.1rem;
+        margin-right: 0.7rem;
+        margin-top: 0.5rem;
     }
 
     .twitter {
         font-size: 1.2rem;
-        padding: 0.4rem 0.5rem 0.5rem 0.4rem; 
+        margin-right: 0.5rem;
+        margin-top: 0.55rem;
     }
     
     .insta {
         font-size: 1.2rem;
-        padding: 0.25rem 0.6rem 0.65rem 0.3rem;
+        margin-right: 0.55rem;
+        margin-top: 0.55rem;
     }
 }
